# email-client

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  meson.build
.github/workflows/: ci.yml
blueprints/: Readme.md
blueprints/mainpage/: main.blp  style.css
build-aux/: de.nordgedanken.Email.Devel.json  de.nordgedanken.Email.Devel.yaml
data/: dev.nordgedanken.Email.desktop  dev.nordgedanken.Email.gresource.xml  dev.nordgedanken.Email.metainfo.xml  meson.build
data/gtk/: style.css
data/icons/: meson.build
resources/: resources.gresource.xml  shortcuts.ui
src/: config.rs  config.rs.in  folder_view.rs  imap_state.rs  login_view.rs  main.rs  main_view.rs  meson.build  style.css
src/main_view/: about_dialog.rs
